# nes

./: .dockerignore  .flake8  .gitignore  .mypy.ini  .pre-commit-config.yaml  .pylintrc  README.md  changes.md  mypy.ini  pyproject.toml
.devcontainer/: .env-template  Dockerfile  devcontainer.json  docker-compose.yml  entrypoint.sh
.github/workflows/: defender-for-devops.yml  dependency-review.yml  pr.yml  quality-assurance.yml  quality.yml  quality_assurance.yml  super-linter.yml
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
patientregistrationsystem/qdc/: .coveragerc  .gitignore  .pylintrc  add_initial_data.py  manage.py  requirements-dev.txt  requirements.txt  requirements_dev.txt  setup_apache.sh  setup_nes.sh  setup_nes_test.sh  setup_server.sh
patientregistrationsystem/qdc/configuration/: models.py  views.py
patientregistrationsystem/qdc/custom_user/: forms.py  models.py  regex_utils.py  urls.py  views.py
patientregistrationsystem/qdc/experiment/: admin.py  forms.py  import_export.py  import_export_model_relations.py  models.py  pdf.py  portal.py  translation.py  urls.py  views.py
patientregistrationsystem/qdc/export/: directory_utils.py  export.py  export_utils.py  forms.py  input_export.py  json_export.json  models.py  urls.py  views.py
patientregistrationsystem/qdc/export_nep/: export_nep.py
patientregistrationsystem/qdc/integration/: README.txt
patientregistrationsystem/qdc/patient/: admin.py  forms.py  models.py  translation.py  urls.py  validation.py  views.py
patientregistrationsystem/qdc/plugin/: models.py  urls.py  views.py
patientregistrationsystem/qdc/processing/: views.py
patientregistrationsystem/qdc/qdc/: asgi.py  check_upgrade.py  forms.py  middleware.py  oauth.py  urls.py  utils.py  views.py  wsgi.py
patientregistrationsystem/qdc/survey/: abc_search_engine.py  change_questionnaire_participants.py  forms.py  models.py  survey_utils.py  urls.py  views.py
resources/limesurvey/: NESIdentification.lsg
resources/load-idc-table/: cid10_etl.txt  readme.txt
resources/wsgi/: wsgi_prod_template.py
scripts/: setup_apache.sh  setup_nes.sh  setup_nes_test.sh
(+244 files in other folders)
