[project]
name = "nes"
readme = "README.md"
requires-python = ">=3.11,<3.12"


[tool.pylint.main]
analyse-fallback-blocks = "no"
clear-cache-post-run = "no"
fail-on = "E"
fail-under = 9
ignore = ["CVS", "tests", "migrations", "settings"]
ignore-paths = "migrations|tests"
jobs = 0
load-plugins = ["pylint_django", "pylint_django.checkers.migrations"]

[tool.pylint.format]
max-line-length = 120

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "raw-checker-failed",
    "bad-inline-option",
    "locally-disabled",
    "file-ignored",
    "suppressed-message",
    "useless-suppression",
    "deprecated-pragma",
    "use-symbolic-message-instead",
    "django-not-configured",
    "multiple-statements",
    "fixme",
    "line-too-long",
    "too-many-locals",
    "consider-using-dict-items",
    "missing-function-docstring",
    "missing-class-docstring",
    "missing-module-docstring",
    "too-many-nested-blocks",
    "too-many-statements",
    "too-many-branches",
    "unused-argument",
    "too-many-public-methods",
    "too-many-lines",
]


[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # flake8-django
    "DJ",
    # flake8-comprehensions
    "C4",
    # flake8-implicit-str-concat
    "ISC",
    # flake8-quotes
    "Q",
    # flake8-type-checking
    "TCH",
    # flake8-pie
    "PIE",
    # flake8-gettext
    "INT",
    # flake8-bandit
    "S",
    # Perflint
    "PERF",
    # RUFF
    "RUF",
]
ignore = ["F401", "F841"]
unfixable = ["B"]


[tool.black]
line-length = 120
include = '\.pyi?$'


[tool.isort]
line_length = 120
profile = "black"
include_trailing_comma = true
force_grid_wrap = 0


[tool.djlint]
profile = "django"
format_js = false
format_css = true
max_line_length = 200
max_blank_lines = 1
use_gitignore = true
blank_line_after_tag = "endblock,load,extends,include"
blank_line_before_tag = "load,block,include"
close_void_tags = false
